# Parallel_Programming_K-Means

./: .gitignore  CMakeLists.txt  Maze.cpp  Maze.h  README.md  TileBox.cpp  TileBox.h  commonFunction.cpp  main-parallel.cpp  main-sequential.cpp  plot_graph.py  profiler.py  setup_dataset.py  speed_up.py  test.cpp
SpeedUp/: speedup_clustering.txt  speedup_initialization.txt
Times/: Times_Kmeans_Parallel.txt  Times_Kmeans_Sequential.txt  Times_Parallel.txt  Times_Sequential.txt
